Update swagger and error code
